LC-620: PR Feedback (avoiding side effects)